Chnages for swagger configuration
